--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+Fabric==1.8.1
 Jinja2==2.7.2
 Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Unidecode==0.04.14
+beautifulsoup4==4.3.2
 blinker==1.3
 docutils==0.11
+ecdsa==0.10
 feedgenerator==1.7
 ghp-import==0.4.0
+paramiko==1.12.1
 pelican==3.3
+pycrypto==2.6.1
 pytz==2013.9
 six==1.5.2
+smartypants==1.8.3
+typogrify==2.0.1
 wsgiref==0.1.2
