--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,18 @@ Unidecode==0.04.14
 anyjson==0.3.3
 beautifulsoup4==4.3.2
 blinker==1.3
+disqus-python==0.4.2
 docutils==0.11
 ecdsa==0.10
 feedgenerator==1.7
 ghp-import==0.4.0
 paramiko==1.12.1
 pelican==3.3
-py-w3c==v0.1.1
+py-w3c==0.1.1
 pycrypto==2.6.1
 pytz==2013.9
 selenium==2.39.0
+simplejson==3.6.5
 six==1.5.2
 smartypants==1.8.3
 typogrify==2.0.1
