--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,17 @@ disqus-python==0.4.2
 docutils==0.11
 ecdsa==0.10
 feedgenerator==1.7
+flake8==2.4.1
 ghp-import==0.4.0
+mccabe==0.3.1
 paramiko==1.12.1
 pelican==3.3
+pep8==1.5.7
 py-w3c==0.1.1
 pycrypto==2.6.1
+pyflakes==0.8.1
 pytz==2013.9
+requests==2.7.0
 selenium==2.39.0
 simplejson==3.6.5
 six==1.5.2
