--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Python 2.7.13
 Fabric==1.8.1
 Jinja2==2.7.2
 Markdown==2.3.1
@@ -17,7 +18,7 @@ mccabe==0.3.1
 paramiko==1.12.1
 pelican==3.3
 pep8==1.5.7
-py-w3c==0.1.1
+py-w3c==0.1.2
 pycrypto==2.6.1
 pyflakes==0.8.1
 pytz==2013.9
