--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,30 @@
-# Python 2.7.13
-Fabric==1.8.1
-Jinja2==2.7.2
-Markdown==2.3.1
-MarkupSafe==0.18
-Pygments==1.6
-Unidecode==0.04.14
 anyjson==0.3.3
 beautifulsoup4==4.3.2
-blinker==1.3
+blinker==1.4
 disqus-python==0.4.2
-docutils==0.11
+docutils==0.14
 ecdsa==0.10
-feedgenerator==1.7
+Fabric==1.8.1
+feedgenerator==1.9
 flake8==2.4.1
 ghp-import==0.4.0
+Jinja2==2.9.6
+Markdown==2.3.1
+MarkupSafe==1.0
 mccabe==0.3.1
 paramiko==1.12.1
-pelican==3.3
+pelican==3.7.1
 pep8==1.5.7
 py-w3c==0.1.2
 pycrypto==2.6.1
 pyflakes==0.8.1
-pytz==2013.9
+Pygments==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
 requests==2.7.0
 selenium==2.39.0
 simplejson==3.6.5
-six==1.5.2
+six==1.10.0
 smartypants==1.8.3
 typogrify==2.0.1
-wsgiref==0.1.2
+Unidecode==0.4.21
