--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,9 @@ pep8==1.5.7
 py-w3c==0.1.2
 pycrypto==2.6.1
 pyflakes==0.8.1
-Pygments==2.2.0
+Pygments==2.5.2
 python-dateutil==2.6.1
+python-gettext==3.0
 pytz==2017.2
 requests==2.7.0
 selenium==2.39.0
